cập nhật bán hàng tại quầy